Hoan thanh bai taoformtimkiemgoogle

--- a/Bài 2/taoformtimkiemgoogle.html
+++ b/Bài 2/taoformtimkiemgoogle.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <form action="https://www.google.com.vn/search">
-    <input type="text" name="q" />
-    <input type="submit" value="tìm kiếm"/>
-
+    <input type="text" name="q" >
+    <input type="submit" value="tìm kiếm" >
 </form>
 </body>
 </html>
